--- a/SEA_Application/Views/Inventory/PrintAllInventoryByCategory.cshtml
+++ b/SEA_Application/Views/Inventory/PrintAllInventoryByCategory.cshtml
@@ -27,8 +27,9 @@
                         <tr>
 
 
-                            <th style="width:60%"> Product Name</th>
+                            <th style="width:40%"> Product Name</th>
                             <th style="width:20%"> Product No</th>
+                            <th style="width:20%">Unit Sale Price</th>
                             <th style="width:20%">Available Quantity</th>
 
                         </tr>
@@ -43,9 +44,11 @@
                         <tr>
 
 
-                            <td style="width:60%">@inventory.Name</td>
+                            <td style="width:40%">@inventory.Name</td>
 
                             <td style="width:20%">@inventory.ItemNo</td>
+
+                            <td style="width:20%">@inventory.UnitSalePrice</td>
 
                             <td style="width:20%">@inventory.QuantityOnHand</td>
                         </tr>
@@ -83,7 +86,7 @@
 
         newWin.document.open();
 
-        newWin.document.write('<html><style> td:nth-child(2),td:nth-child(3){ text-align:center;} td{padding:8px;} th,td,table{border-collapse: collapse;}</style><body onload="window.print()">' + divToPrint.innerHTML + '</body></html>');
+        newWin.document.write('<html><style> td:nth-child(2),td:nth-child(3),td:nth-child(4){ text-align:center;} td{padding:8px;} th,td,table{border-collapse: collapse;}</style><body onload="window.print()">' + divToPrint.innerHTML + '</body></html>');
 
         newWin.document.close();
 
