--- a/SEA_Application/Views/Inventory/PurchaseOrdersList.cshtml
+++ b/SEA_Application/Views/Inventory/PurchaseOrdersList.cshtml
@@ -24,6 +24,9 @@
                     </th>
 
                     <th>
+                        Status
+                    </th>
+                    <th>
                         Purchase Date
                     </th>
 
@@ -54,12 +57,7 @@
 
             buttons: [
 
-                //{
-                //    text: '<span class="datatableButtonsEdit"> Return Order</span>',
-                //    action: function (e, dt, button, config) {
-                //        window.location.href = "/AspNetNotes/ReturnOrder";
-                //    }
-                //},
+               
                 //{
                 //    text: '<span class="datatableButtonsEdit"> Place Order</span>',
                 //    action: function (e, dt, button, config) {
@@ -93,6 +91,20 @@
                     text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Add Stocks</span>',
                     action: function (e, dt, button, config) {
                         window.location.href = "/Inventory/AddStockPurchase";
+                    }
+                },
+
+                {
+                    text: '<span class="datatableButtonsEdit"> Return Order</span>',
+                    action: function (e, dt, button, config) {
+                        window.location.href = "/Inventory/ReturnPurchasedOrder";
+                    }
+                },
+
+                {
+                    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Summary</span>',
+                    action: function (e, dt, button, config) {
+                        window.location.href = "/Inventory/PurchasedOrderSummary";
                     }
                 },
 
@@ -140,7 +152,7 @@
                         "/" +
                         value.getFullYear();
 
-                    table.fnAddData([data[index].OrderNo + "<input  type=hidden value=" + data[index].Id + ">", data[index].Notes, dat, "<input type='button' class='btn btn-sm btn-primary' style='color:white !important' value='View Details' onclick='OrderDetails(" + data[index].Id + ")'> "]);
+                    table.fnAddData([data[index].OrderNo + "<input  type=hidden value=" + data[index].Id + ">", data[index].Notes, data[index].Status, dat, "<input type='button' class='btn btn-sm btn-primary' style='color:white !important' value='View Details' onclick='OrderDetails(" + data[index].Id + ")'> "]);
 
                 });
                 table.fnDraw();
